tests/fail-dep/libc/malloc_zero_memory_leak.rs
#[cfg_attr(kani, kani::proof)]
fn main() {
    unsafe {
        let _ptr = libc::malloc(0); //~ERROR: memory leak
    }
}
